...
    var body: some View {
        Form {
            Section {
                Toggle(isOn: $settings.autoUpdateRate) {
                    Label("settingsAutoUpdateRate", systemImage: "bolt.batteryblock")
                }
                .accessibilityIdentifier("autoUpdateRateToggle")

                Picker(selection: $settings.updateRate) {
                    ForEach(UpdateRate.allCases) { rate in
                        VStack(alignment: .leading) {
                            Text(rate.labelKey)
                            Text(rate.descriptionKey)
...
