...
    "dashboardTitle" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "BeeSense"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "BeeSense"
...
